[gd_scene load_steps=42 format=4 uid="uid://dqmptspjmueb1"]

[ext_resource type="Script" uid="uid://dn36fqhgevetm" path="res://nodes/main.gd" id="1_1n1q0"]
[ext_resource type="PackedScene" uid="uid://m3ryk0cnyv74" path="res://nodes/main_character.tscn" id="1_xpfdc"]
[ext_resource type="Texture2D" uid="uid://ca732l280v085" path="res://Art/png/brick.png" id="2_y2wr3"]
[ext_resource type="Texture2D" uid="uid://v8dbyktu1e06" path="res://Art/png/ground.png" id="3_sybi7"]
[ext_resource type="PackedScene" uid="uid://p11hjakr84pt" path="res://nodes/game_over.tscn" id="3_vr02l"]
[ext_resource type="Texture2D" uid="uid://d4h2qws781drb" path="res://Art/png/ground alt.png" id="4_1vlam"]
[ext_resource type="Texture2D" uid="uid://2ypphe7jlyg0" path="res://Art/png/normal block.png" id="4_6s2ku"]
[ext_resource type="Texture2D" uid="uid://cpdd5hxeyp6eo" path="res://Art/png/mystery block.png" id="5_gp064"]
[ext_resource type="Texture2D" uid="uid://gjkg2557ptre" path="res://Art/png/brick alt.png" id="5_usfbk"]
[ext_resource type="Texture2D" uid="uid://cc4xnpg1ct2et" path="res://Art/png/headquarters.png" id="6_1n1q0"]
[ext_resource type="PackedScene" uid="uid://fbbc28g1o3q2" path="res://nodes/hud.tscn" id="6_sybi7"]
[ext_resource type="PackedScene" uid="uid://cw4y54fe4u20g" path="res://nodes/mystery_block.tscn" id="7_6s2ku"]
[ext_resource type="Texture2D" uid="uid://frjscwllh1fy" path="res://Art/png/pipe top.png" id="7_vr02l"]
[ext_resource type="PackedScene" uid="uid://dut1d37o542vw" path="res://nodes/coin.tscn" id="8_01b7x"]
[ext_resource type="PackedScene" uid="uid://ct5ixit5wcdq2" path="res://nodes/data_yellow.tscn" id="8_gp064"]
[ext_resource type="Texture2D" uid="uid://ccxwmqt60a22n" path="res://Art/png/flagpole.png" id="10_2toya"]
[ext_resource type="PackedScene" uid="uid://xlsfswfx1jj1" path="res://nodes/life_up.tscn" id="10_heg84"]
[ext_resource type="PackedScene" uid="uid://dyfsur47t62hx" path="res://nodes/data_pink.tscn" id="11_c3m70"]
[ext_resource type="Texture2D" uid="uid://1xnq0owyov2" path="res://Art/png/flagtop.png" id="11_jfcuo"]
[ext_resource type="Texture2D" uid="uid://dv6pfc1lqyidg" path="res://Art/png/pipe base.png" id="12_g653p"]
[ext_resource type="PackedScene" uid="uid://chps5hmijp77j" path="res://nodes/data_blue.tscn" id="12_t4bcl"]
[ext_resource type="PackedScene" uid="uid://daxnq8ofijc2g" path="res://nodes/goomba.tscn" id="13_ecu0m"]
[ext_resource type="PackedScene" uid="uid://bvxa1fqukjok8" path="res://nodes/koopa.tscn" id="14_gmty7"]
[ext_resource type="PackedScene" uid="uid://droms1yhlkwkx" path="res://nodes/headquarters.tscn" id="23_usfbk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pmn7o"]
texture = ExtResource("2_y2wr3")
texture_region_size = Vector2i(18, 18)
0:0/size_in_atlas = Vector2i(2, 2)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-18, -18, 18, -18, 18, 18, -18, 18)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rshm7"]
texture = ExtResource("3_sybi7")
texture_region_size = Vector2i(36, 36)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-18, -18, 18, -18, 18, 18, -18, 18)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u2n8d"]
texture = ExtResource("4_1vlam")
texture_region_size = Vector2i(36, 36)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-18, -18, 18, -18, 18, 18, -18, 18)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t5vdr"]
texture = ExtResource("5_usfbk")
texture_region_size = Vector2i(36, 36)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-18, -18, 18, -18, 18, 18, -18, 18)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gtvj2"]
texture = ExtResource("6_1n1q0")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m1xwi"]
texture = ExtResource("7_vr02l")
texture_region_size = Vector2i(36, 16)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-18, -18, 18, -18, 18, 18, -18, 18)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7aemw"]
texture = ExtResource("4_6s2ku")
texture_region_size = Vector2i(36, 36)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-18, -18, 18, -18, 18, 18, -18, 18)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h1sum"]
texture = ExtResource("5_gp064")
texture_region_size = Vector2i(36, 36)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-18, -18, 18, -18, 18, 18, -18, 18)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_imhw3"]
texture = ExtResource("10_2toya")
texture_region_size = Vector2i(36, 36)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_eedq5"]
texture = ExtResource("11_jfcuo")
texture_region_size = Vector2i(36, 36)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dm2dr"]
texture = ExtResource("12_g653p")
texture_region_size = Vector2i(36, 36)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-18, -18, 18, -18, 18, 18, -18, 18)

[sub_resource type="TileSet" id="TileSet_h0f1k"]
tile_size = Vector2i(36, 36)
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 31
sources/0 = SubResource("TileSetAtlasSource_pmn7o")
sources/1 = SubResource("TileSetAtlasSource_rshm7")
sources/2 = SubResource("TileSetAtlasSource_7aemw")
sources/3 = SubResource("TileSetAtlasSource_h1sum")
sources/5 = SubResource("TileSetAtlasSource_imhw3")
sources/6 = SubResource("TileSetAtlasSource_eedq5")
sources/7 = SubResource("TileSetAtlasSource_dm2dr")
sources/10 = SubResource("TileSetAtlasSource_u2n8d")
sources/11 = SubResource("TileSetAtlasSource_t5vdr")
sources/13 = SubResource("TileSetAtlasSource_gtvj2")
sources/14 = SubResource("TileSetAtlasSource_m1xwi")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1n1q0"]
size = Vector2(14, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vr02l"]
size = Vector2(12, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2toya"]
size = Vector2(942, 144)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jfcuo"]
size = Vector2(157, 95)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g653p"]
size = Vector2(190, 57)

[node name="Main" type="Node2D"]
script = ExtResource("1_1n1q0")

[node name="main_character" parent="." instance=ExtResource("1_xpfdc")]
position = Vector2(218, 555)
collision_mask = 15
game_over = ExtResource("3_vr02l")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAABAAAQAAAAAAAAABABAAAQAAAAAAAAACABAAAQAAAAAAAAADABAAAQAAAAAAAAAEABAAAQAAAAAAAAAFABAAAQAAAAAAAAAGABAAAQAAAAAAAAAHABAAAQAAAAAAAAAIABAAAQAAAAAAAAAJABAAAQAAAAAAAAAKABAAAQAAAAAAAAALABAAAQAAAAAAAAAMABAAAQAAAAAAAAANABAAAQAAAAAAAAAOABAAAQAAAAAAAAAPABAAAQAAAAAAAAAQABAAAQAAAAAAAAAQABEAAQAAAAAAAAAPABEAAQAAAAAAAAAOABEAAQAAAAAAAAANABEAAQAAAAAAAAAMABEAAQAAAAAAAAALABEAAQAAAAAAAAAKABEAAQAAAAAAAAAJABEAAQAAAAAAAAAIABEAAQAAAAAAAAAHABEAAQAAAAAAAAAGABEAAQAAAAAAAAAFABEAAQAAAAAAAAAEABEAAQAAAAAAAAADABEAAQAAAAAAAAACABEAAQAAAAAAAAABABEAAQAAAAAAAAAAABEAAQAAAAAAAAARABAAAQAAAAAAAAARABEAAQAAAAAAAAATAAwAAAAAAAAAAAAVAAwAAAAAAAAAAAAXAAwAAAAAAAAAAAAUABAAAQAAAAAAAAAVABAAAQAAAAAAAAAWABAAAQAAAAAAAAAXABAAAQAAAAAAAAAXABEAAQAAAAAAAAAWABEAAQAAAAAAAAAVABEAAQAAAAAAAAAUABEAAQAAAAAAAAAYABAAAQAAAAAAAAAZABAAAQAAAAAAAAAaABAAAQAAAAAAAAAbABAAAQAAAAAAAAAcABAAAQAAAAAAAAAcABEAAQAAAAAAAAAbABEAAQAAAAAAAAAaABEAAQAAAAAAAAAZABEAAQAAAAAAAAAYABEAAQAAAAAAAAAdABAAAQAAAAAAAAAeABAAAQAAAAAAAAAfABAAAQAAAAAAAAAgABAAAQAAAAAAAAAhABAAAQAAAAAAAAAiABAAAQAAAAAAAAAjABAAAQAAAAAAAAAkABAAAQAAAAAAAAAlABAAAQAAAAAAAAAmABAAAQAAAAAAAAAmABEAAQAAAAAAAAAlABEAAQAAAAAAAAAkABEAAQAAAAAAAAAjABEAAQAAAAAAAAAiABEAAQAAAAAAAAAhABEAAQAAAAAAAAAgABEAAQAAAAAAAAAfABEAAQAAAAAAAAAeABEAAQAAAAAAAAAdABEAAQAAAAAAAAAnABAAAQAAAAAAAAAoABAAAQAAAAAAAAApABAAAQAAAAAAAAAqABAAAQAAAAAAAAArABAAAQAAAAAAAAAsABAAAQAAAAAAAAAtABAAAQAAAAAAAAAuABAAAQAAAAAAAAAuABEAAQAAAAAAAAAtABEAAQAAAAAAAAAsABEAAQAAAAAAAAArABEAAQAAAAAAAAAqABEAAQAAAAAAAAApABEAAQAAAAAAAAAoABEAAQAAAAAAAAAnABEAAQAAAAAAAAAvABAAAQAAAAAAAAAwABAAAQAAAAAAAAAxABAAAQAAAAAAAAAyABAAAQAAAAAAAAAzABAAAQAAAAAAAAA0ABAAAQAAAAAAAAA1ABAAAQAAAAAAAAA2ABAAAQAAAAAAAAA3ABAAAQAAAAAAAAA4ABAAAQAAAAAAAAA5ABAAAQAAAAAAAAA5ABEAAQAAAAAAAAA4ABEAAQAAAAAAAAA3ABEAAQAAAAAAAAA2ABEAAQAAAAAAAAAxABEAAQAAAAAAAAAwABEAAQAAAAAAAAAvABEAAQAAAAAAAAAyABEAAQAAAAAAAAAzABEAAQAAAAAAAAA0ABEAAQAAAAAAAAA1ABEAAQAAAAAAAAA6ABAAAQAAAAAAAAA7ABAAAQAAAAAAAAA8ABAAAQAAAAAAAAA9ABAAAQAAAAAAAAA+ABAAAQAAAAAAAAA/ABAAAQAAAAAAAAA/ABEAAQAAAAAAAAA+ABEAAQAAAAAAAAA9ABEAAQAAAAAAAAA8ABEAAQAAAAAAAAA7ABEAAQAAAAAAAAA6ABEAAQAAAAAAAABAABAAAQAAAAAAAABBABAAAQAAAAAAAABCABAAAQAAAAAAAABDABAAAQAAAAAAAABDABEAAQAAAAAAAABCABEAAQAAAAAAAABBABEAAQAAAAAAAABAABEAAQAAAAAAAABGABAAAQAAAAAAAABHABAAAQAAAAAAAABIABAAAQAAAAAAAABJABAAAQAAAAAAAABKABAAAQAAAAAAAABLABAAAQAAAAAAAABMABAAAQAAAAAAAABMABEAAQAAAAAAAABLABEAAQAAAAAAAABKABEAAQAAAAAAAABJABEAAQAAAAAAAABIABEAAQAAAAAAAABHABEAAQAAAAAAAABGABEAAQAAAAAAAABMAAwAAAAAAAAAAABNABAAAQAAAAAAAABOABAAAQAAAAAAAABPABAAAQAAAAAAAABQABAAAQAAAAAAAABRABAAAQAAAAAAAABSABAAAQAAAAAAAABTABAAAQAAAAAAAABUABAAAQAAAAAAAABUABEAAQAAAAAAAABTABEAAQAAAAAAAABSABEAAQAAAAAAAABRABEAAQAAAAAAAABQABEAAQAAAAAAAABPABEAAQAAAAAAAABOABEAAQAAAAAAAABNABEAAQAAAAAAAABOAAwAAAAAAAAAAABPAAgAAAAAAAAAAABYABAAAQAAAAAAAABYABEAAQAAAAAAAABQAAgAAAAAAAAAAABRAAgAAAAAAAAAAABSAAgAAAAAAAAAAABTAAgAAAAAAAAAAABUAAgAAAAAAAAAAABVAAgAAAAAAAAAAABWAAgAAAAAAAAAAABaAAgAAAAAAAAAAABbAAgAAAAAAAAAAABcAAgAAAAAAAAAAABZABAAAQAAAAAAAABaABAAAQAAAAAAAABbABAAAQAAAAAAAABcABAAAQAAAAAAAABdABAAAQAAAAAAAABdABEAAQAAAAAAAABcABEAAQAAAAAAAABbABEAAQAAAAAAAABaABEAAQAAAAAAAABZABEAAQAAAAAAAABeABAAAQAAAAAAAABfABAAAQAAAAAAAABgABAAAQAAAAAAAABhABAAAQAAAAAAAABiABAAAQAAAAAAAABjABAAAQAAAAAAAABiABEAAQAAAAAAAABhABEAAQAAAAAAAABgABEAAQAAAAAAAABfABEAAQAAAAAAAABeABEAAQAAAAAAAABjABEAAQAAAAAAAABdAAwAAAAAAAAAAABjAAwAAAAAAAAAAABkAAwAAAAAAAAAAABkABAAAQAAAAAAAABlABAAAQAAAAAAAABmABAAAQAAAAAAAABnABAAAQAAAAAAAABoABAAAQAAAAAAAABpABAAAQAAAAAAAABpABEAAQAAAAAAAABoABEAAQAAAAAAAABnABEAAQAAAAAAAABmABEAAQAAAAAAAABlABEAAQAAAAAAAABkABEAAQAAAAAAAABqABAAAQAAAAAAAABrABAAAQAAAAAAAABsABAAAQAAAAAAAABtABAAAQAAAAAAAABuABAAAQAAAAAAAABvABAAAQAAAAAAAABvABEAAQAAAAAAAABuABEAAQAAAAAAAABtABEAAQAAAAAAAABsABEAAQAAAAAAAABrABEAAQAAAAAAAABqABEAAQAAAAAAAABwABAAAQAAAAAAAABxABAAAQAAAAAAAAByABAAAQAAAAAAAABzABAAAQAAAAAAAAB0ABAAAQAAAAAAAAB1ABAAAQAAAAAAAAB1ABEAAQAAAAAAAAB0ABEAAQAAAAAAAABzABEAAQAAAAAAAAByABEAAQAAAAAAAABxABEAAQAAAAAAAABwABEAAQAAAAAAAAB1AAwAAAAAAAAAAAB2ABAAAQAAAAAAAAB3ABAAAQAAAAAAAAB4ABAAAQAAAAAAAAB5ABAAAQAAAAAAAAB6ABAAAQAAAAAAAAB7ABAAAQAAAAAAAAB8ABAAAQAAAAAAAAB9ABAAAQAAAAAAAAB+ABAAAQAAAAAAAAB/ABAAAQAAAAAAAACAABAAAQAAAAAAAACBABAAAQAAAAAAAACCABAAAQAAAAAAAACDABAAAQAAAAAAAACEABAAAQAAAAAAAACFABAAAQAAAAAAAACFABEAAQAAAAAAAACEABEAAQAAAAAAAACDABEAAQAAAAAAAACCABEAAQAAAAAAAACBABEAAQAAAAAAAACAABEAAQAAAAAAAAB/ABEAAQAAAAAAAAB+ABEAAQAAAAAAAAB9ABEAAQAAAAAAAAB3ABEAAQAAAAAAAAB2ABEAAQAAAAAAAAB4ABEAAQAAAAAAAAB5ABEAAQAAAAAAAAB6ABEAAQAAAAAAAAB7ABEAAQAAAAAAAAB8ABEAAQAAAAAAAACFAA8AAgAAAAAAAACGAA8AAgAAAAAAAACGAA4AAgAAAAAAAACHAA8AAgAAAAAAAACHAA4AAgAAAAAAAACHAA0AAgAAAAAAAACIAAwAAgAAAAAAAACIAA0AAgAAAAAAAACIAA4AAgAAAAAAAACIAA8AAgAAAAAAAACLAAwAAgAAAAAAAACLAA0AAgAAAAAAAACLAA4AAgAAAAAAAACLAA8AAgAAAAAAAACMAA0AAgAAAAAAAACMAA4AAgAAAAAAAACMAA8AAgAAAAAAAACNAA4AAgAAAAAAAACNAA8AAgAAAAAAAACOAA8AAgAAAAAAAACGABAAAQAAAAAAAACHABAAAQAAAAAAAACIABAAAQAAAAAAAACJABAAAQAAAAAAAACKABAAAQAAAAAAAACLABAAAQAAAAAAAACMABAAAQAAAAAAAACNABAAAQAAAAAAAACOABAAAQAAAAAAAACOABEAAQAAAAAAAACNABEAAQAAAAAAAACMABEAAQAAAAAAAACLABEAAQAAAAAAAACKABEAAQAAAAAAAACJABEAAQAAAAAAAACIABEAAQAAAAAAAACHABEAAQAAAAAAAACGABEAAQAAAAAAAACBAAwAAAAAAAAAAACAAAwAAAAAAAAAAACCAAgAAAAAAAAAAAB/AAgAAAAAAAAAAAB6AAgAAAAAAAAAAAB5AAgAAAAAAAAAAAB7AAgAAAAAAAAAAACPABAAAQAAAAAAAACQABAAAQAAAAAAAACRABAAAQAAAAAAAACSABAAAQAAAAAAAACTABAAAQAAAAAAAACTABEAAQAAAAAAAACSABEAAQAAAAAAAACRABEAAQAAAAAAAACQABEAAQAAAAAAAACPABEAAQAAAAAAAACTAA8AAgAAAAAAAACUAA8AAgAAAAAAAACUAA4AAgAAAAAAAACVAA8AAgAAAAAAAACVAA4AAgAAAAAAAACVAA0AAgAAAAAAAACXAAwAAgAAAAAAAACWAAwAAgAAAAAAAACXAA0AAgAAAAAAAACWAA0AAgAAAAAAAACWAA4AAgAAAAAAAACXAA4AAgAAAAAAAACXAA8AAgAAAAAAAACWAA8AAgAAAAAAAACaAAwAAgAAAAAAAACaAA0AAgAAAAAAAACaAA4AAgAAAAAAAACbAA0AAgAAAAAAAACbAA4AAgAAAAAAAACbAA8AAgAAAAAAAACaAA8AAgAAAAAAAACcAA4AAgAAAAAAAACcAA8AAgAAAAAAAACdAA8AAgAAAAAAAACUABAAAQAAAAAAAACVABAAAQAAAAAAAACWABAAAQAAAAAAAACXABAAAQAAAAAAAACYABAAAQAAAAAAAACZABAAAQAAAAAAAACaABAAAQAAAAAAAACbABAAAQAAAAAAAACcABAAAQAAAAAAAACdABAAAQAAAAAAAACaABEAAQAAAAAAAACZABEAAQAAAAAAAACYABEAAQAAAAAAAACXABEAAQAAAAAAAACWABEAAQAAAAAAAACVABEAAQAAAAAAAACUABEAAQAAAAAAAACbABEAAQAAAAAAAACcABEAAQAAAAAAAACdABEAAQAAAAAAAACeABAAAQAAAAAAAACfABAAAQAAAAAAAACgABAAAQAAAAAAAAChABAAAQAAAAAAAACiABAAAQAAAAAAAACjABAAAQAAAAAAAACjABEAAQAAAAAAAACiABEAAQAAAAAAAAChABEAAQAAAAAAAACgABEAAQAAAAAAAACfABEAAQAAAAAAAACeABEAAQAAAAAAAACkABAAAQAAAAAAAAClABAAAQAAAAAAAACmABAAAQAAAAAAAACnABAAAQAAAAAAAACnABEAAQAAAAAAAACmABEAAQAAAAAAAAClABEAAQAAAAAAAACkABEAAQAAAAAAAACnAAwAAAAAAAAAAACoAAwAAAAAAAAAAACqAAwAAAAAAAAAAACoABAAAQAAAAAAAACpABAAAQAAAAAAAACqABAAAQAAAAAAAACqABEAAQAAAAAAAACpABEAAQAAAAAAAACoABEAAQAAAAAAAACrABAAAQAAAAAAAACsABAAAQAAAAAAAACtABAAAQAAAAAAAACuABAAAQAAAAAAAACvABAAAQAAAAAAAACwABAAAQAAAAAAAACxABAAAQAAAAAAAACyABAAAQAAAAAAAACzABAAAQAAAAAAAACrABEAAQAAAAAAAACsABEAAQAAAAAAAACtABEAAQAAAAAAAACuABEAAQAAAAAAAACvABEAAQAAAAAAAACwABEAAQAAAAAAAACxABEAAQAAAAAAAACyABEAAQAAAAAAAACzABEAAQAAAAAAAAC0AA8AAgAAAAAAAAC1AA8AAgAAAAAAAAC1AA4AAgAAAAAAAAC2AA8AAgAAAAAAAAC2AA4AAgAAAAAAAAC2AA0AAgAAAAAAAAC3AAwAAgAAAAAAAAC3AA0AAgAAAAAAAAC3AA4AAgAAAAAAAAC3AA8AAgAAAAAAAAC4AA8AAgAAAAAAAAC4AA4AAgAAAAAAAAC4AA0AAgAAAAAAAAC4AAwAAgAAAAAAAAC4AAsAAgAAAAAAAAC5AA8AAgAAAAAAAAC5AA4AAgAAAAAAAAC5AA0AAgAAAAAAAAC5AAwAAgAAAAAAAAC5AAsAAgAAAAAAAAC5AAoAAgAAAAAAAAC6AA8AAgAAAAAAAAC6AA4AAgAAAAAAAAC6AA0AAgAAAAAAAAC6AAwAAgAAAAAAAAC6AAsAAgAAAAAAAAC6AAoAAgAAAAAAAAC6AAkAAgAAAAAAAAC7AA8AAgAAAAAAAAC7AA4AAgAAAAAAAAC7AA0AAgAAAAAAAAC7AAwAAgAAAAAAAAC7AAsAAgAAAAAAAAC7AAoAAgAAAAAAAAC7AAkAAgAAAAAAAAC7AAgAAgAAAAAAAAC8AAgAAgAAAAAAAAC8AAkAAgAAAAAAAAC8AAoAAgAAAAAAAAC8AAsAAgAAAAAAAAC8AAwAAgAAAAAAAAC8AA0AAgAAAAAAAAC8AA4AAgAAAAAAAAC8AA8AAgAAAAAAAAC0ABAAAQAAAAAAAAC1ABAAAQAAAAAAAAC2ABAAAQAAAAAAAAC3ABAAAQAAAAAAAAC4ABAAAQAAAAAAAAC5ABAAAQAAAAAAAAC8ABAAAQAAAAAAAAC6ABAAAQAAAAAAAAC7ABAAAQAAAAAAAAC8ABEAAQAAAAAAAAC7ABEAAQAAAAAAAAC6ABEAAQAAAAAAAAC5ABEAAQAAAAAAAAC4ABEAAQAAAAAAAAC3ABEAAQAAAAAAAAC2ABEAAQAAAAAAAAC1ABEAAQAAAAAAAAC0ABEAAQAAAAAAAAC9ABAAAQAAAAAAAAC+ABAAAQAAAAAAAAC/ABAAAQAAAAAAAADAABAAAQAAAAAAAADBABAAAQAAAAAAAADCABAAAQAAAAAAAADDABAAAQAAAAAAAADEABAAAQAAAAAAAADFABAAAQAAAAAAAADFABEAAQAAAAAAAADEABEAAQAAAAAAAADDABEAAQAAAAAAAADCABEAAQAAAAAAAADBABEAAQAAAAAAAADAABEAAQAAAAAAAAC/ABEAAQAAAAAAAAC+ABEAAQAAAAAAAAC9ABEAAQAAAAAAAADFAA8AAgAAAAAAAADGABAAAQAAAAAAAADHABAAAQAAAAAAAADIABAAAQAAAAAAAADJABAAAQAAAAAAAADKABAAAQAAAAAAAADLABAAAQAAAAAAAADMABAAAQAAAAAAAADNABAAAQAAAAAAAADNABEAAQAAAAAAAADMABEAAQAAAAAAAADLABEAAQAAAAAAAADKABEAAQAAAAAAAADJABEAAQAAAAAAAADIABEAAQAAAAAAAADHABEAAQAAAAAAAADGABEAAQAAAAAAAADOABAAAQAAAAAAAADPABAAAQAAAAAAAADQABAAAQAAAAAAAADRABAAAQAAAAAAAADSABAAAQAAAAAAAADTABAAAQAAAAAAAADUABAAAQAAAAAAAADVABAAAQAAAAAAAADWABAAAQAAAAAAAADXABAAAQAAAAAAAADYABAAAQAAAAAAAADZABAAAQAAAAAAAADaABAAAQAAAAAAAADbABAAAQAAAAAAAADcABAAAQAAAAAAAADdABAAAQAAAAAAAADeABAAAQAAAAAAAADOABEAAQAAAAAAAADPABEAAQAAAAAAAADQABEAAQAAAAAAAADRABEAAQAAAAAAAADSABEAAQAAAAAAAADTABEAAQAAAAAAAADUABEAAQAAAAAAAADVABEAAQAAAAAAAADWABEAAQAAAAAAAADXABEAAQAAAAAAAADYABEAAQAAAAAAAADZABEAAQAAAAAAAADaABEAAQAAAAAAAADbABEAAQAAAAAAAADcABEAAQAAAAAAAADdABEAAQAAAAAAAADeABEAAQAAAAAAAAASABAAAQAAAAAAAAATABAAAQAAAAAAAAATABEAAQAAAAAAAAASABEAAQAAAAAAAAAcAA8ABwAAAAAAAAAmAA8ABwAAAAAAAAAmAA4ABwAAAAAAAAAuAA8ABwAAAAAAAAAuAA4ABwAAAAAAAAAuAA0ABwAAAAAAAAA5AA8ABwAAAAAAAAA5AA4ABwAAAAAAAAA5AA0ABwAAAAAAAACiAA8ABwAAAAAAAACyAA8ABwAAAAAAAADFAA4ABQAAAAAAAADFAA0ABQAAAAAAAADFAAwABQAAAAAAAADFAAsABQAAAAAAAADFAAoABQAAAAAAAADFAAkABQAAAAAAAADFAAgABQAAAAAAAADFAAcABQAAAAAAAADFAAYABgAAAAAAAAA9AD8ACgAAAAAAAAA+AD8ACgAAAAAAAAA/AD8ACgAAAAAAAABAAD8ACgAAAAAAAABBAD8ACgAAAAAAAABCAD8ACgAAAAAAAABDAD8ACgAAAAAAAABEAD8ACgAAAAAAAABFAD8ACgAAAAAAAABGAD8ACgAAAAAAAABHAD8ACgAAAAAAAABIAD8ACgAAAAAAAABJAD8ACgAAAAAAAABKAD8ACgAAAAAAAABLAD8ACgAAAAAAAABMAD8ACgAAAAAAAABNAD8ACgAAAAAAAABNAD4ACgAAAAAAAABMAD4ACgAAAAAAAABLAD4ACgAAAAAAAABKAD4ACgAAAAAAAABJAD4ACgAAAAAAAABIAD4ACgAAAAAAAABHAD4ACgAAAAAAAABGAD4ACgAAAAAAAABFAD4ACgAAAAAAAABEAD4ACgAAAAAAAABDAD4ACgAAAAAAAABCAD4ACgAAAAAAAABBAD4ACgAAAAAAAABAAD4ACgAAAAAAAAA/AD4ACgAAAAAAAAA+AD4ACgAAAAAAAAA9AD4ACgAAAAAAAAA9AD0ACwAAAAAAAAA9ADwACwAAAAAAAAA9ADsACwAAAAAAAABBAD0ACwAAAAAAAABCAD0ACwAAAAAAAABHAD0ACwAAAAAAAABGAD0ACwAAAAAAAABFAD0ACwAAAAAAAABEAD0ACwAAAAAAAABDAD0ACwAAAAAAAABBADwACwAAAAAAAABBADsACwAAAAAAAABCADsACwAAAAAAAABCADwACwAAAAAAAABDADwACwAAAAAAAABDADsACwAAAAAAAABEADsACwAAAAAAAABEADwACwAAAAAAAABFADwACwAAAAAAAABFADsACwAAAAAAAABGADsACwAAAAAAAABGADwACwAAAAAAAABHADsACwAAAAAAAABHADwACwAAAAAAAAA9ADoACwAAAAAAAAA9ADkACwAAAAAAAAA9ADgACwAAAAAAAAA9ADcACwAAAAAAAAA9ADYACwAAAAAAAAA9ADUACwAAAAAAAAA9ADQACwAAAAAAAABBADQACwAAAAAAAABCADQACwAAAAAAAABDADQACwAAAAAAAABEADQACwAAAAAAAABFADQACwAAAAAAAABGADQACwAAAAAAAABHADQACwAAAAAAAABMAD0ABwAAAAAAAGBNAD0ABwAAAAAAAABNADwABwAAAAAAAABNADsABwAAAAAAAABNADoABwAAAAAAAABNADkABwAAAAAAAABNADgABwAAAAAAAABNADcABwAAAAAAAABNADYABwAAAAAAAABNADUABwAAAAAAAABNADQABwAAAAAAAAA9ADMACwAAAAAAAAA9ADIACwAAAAAAAAA9ADEACwAAAAAAAAA9ADAACwAAAAAAAABBADMACwAAAAAAAABBADIACwAAAAAAAABBADEACwAAAAAAAABCADEACwAAAAAAAABCADAACwAAAAAAAABBADAACwAAAAAAAABDADAACwAAAAAAAABEADAACwAAAAAAAABEADEACwAAAAAAAABDADEACwAAAAAAAABCADIACwAAAAAAAABDADIACwAAAAAAAABEADIACwAAAAAAAABDADMACwAAAAAAAABCADMACwAAAAAAAABEADMACwAAAAAAAABFADMACwAAAAAAAABGADMACwAAAAAAAABHADMACwAAAAAAAABHADIACwAAAAAAAABHADEACwAAAAAAAABGADEACwAAAAAAAABFADEACwAAAAAAAABFADAACwAAAAAAAABGADAACwAAAAAAAABHADAACwAAAAAAAABGADIACwAAAAAAAABFADIACwAAAAAAAAA=")
tile_set = SubResource("TileSet_h0f1k")

[node name="HUD" parent="." instance=ExtResource("6_sybi7")]

[node name="MysteryBlocks" type="Node" parent="."]

[node name="Mystery Block" parent="MysteryBlocks" instance=ExtResource("7_6s2ku")]
position = Vector2(594, 450)
item_scene = ExtResource("8_01b7x")

[node name="Mystery Block2" parent="MysteryBlocks" instance=ExtResource("7_6s2ku")]
position = Vector2(738, 450)
item_scene = ExtResource("8_gp064")

[node name="Mystery Block3" parent="MysteryBlocks" instance=ExtResource("7_6s2ku")]
position = Vector2(810, 450)
item_scene = ExtResource("8_01b7x")

[node name="Mystery Block4" parent="MysteryBlocks" instance=ExtResource("7_6s2ku")]
position = Vector2(774, 306)
item_scene = ExtResource("8_01b7x")

[node name="Mystery Block5" parent="MysteryBlocks" instance=ExtResource("7_6s2ku")]
modulate = Color(1, 1, 1, 0)
position = Vector2(2286, 414)
item_scene = ExtResource("10_heg84")

[node name="Mystery Block6" parent="MysteryBlocks" instance=ExtResource("7_6s2ku")]
position = Vector2(2790, 450)
item_scene = ExtResource("11_c3m70")

[node name="Mystery Block7" parent="MysteryBlocks" instance=ExtResource("7_6s2ku")]
position = Vector2(3366, 306)
item_scene = ExtResource("8_01b7x")

[node name="Mystery Block8" parent="MysteryBlocks" instance=ExtResource("7_6s2ku")]
position = Vector2(4014, 450)
item_scene = ExtResource("8_01b7x")

[node name="Mystery Block9" parent="MysteryBlocks" instance=ExtResource("7_6s2ku")]
position = Vector2(4626, 306)
item_scene = ExtResource("8_01b7x")

[node name="Mystery Block10" parent="MysteryBlocks" instance=ExtResource("7_6s2ku")]
position = Vector2(6102, 450)
item_scene = ExtResource("8_01b7x")

[node name="Mystery Block11" parent="MysteryBlocks" instance=ExtResource("7_6s2ku")]
position = Vector2(3798, 450)
item_scene = ExtResource("8_01b7x")

[node name="Mystery Block12" parent="MysteryBlocks" instance=ExtResource("7_6s2ku")]
position = Vector2(3906, 450)
item_scene = ExtResource("12_t4bcl")

[node name="Mystery Block13" parent="MysteryBlocks" instance=ExtResource("7_6s2ku")]
position = Vector2(4662, 306)
item_scene = ExtResource("8_01b7x")

[node name="Mystery Block14" parent="MysteryBlocks" instance=ExtResource("7_6s2ku")]
position = Vector2(3906, 306)
item_scene = ExtResource("8_gp064")

[node name="Enemies" type="Node" parent="."]

[node name="Goomba" parent="Enemies" instance=ExtResource("13_ecu0m")]
position = Vector2(893, 562)

[node name="Goomba2" parent="Enemies" instance=ExtResource("13_ecu0m")]
position = Vector2(1534, 556)

[node name="Goomba3" parent="Enemies" instance=ExtResource("13_ecu0m")]
position = Vector2(1838, 557)

[node name="Goomba4" parent="Enemies" instance=ExtResource("13_ecu0m")]
position = Vector2(1928, 553)

[node name="Goomba5" parent="Enemies" instance=ExtResource("13_ecu0m")]
position = Vector2(2903, 268)

[node name="Goomba6" parent="Enemies" instance=ExtResource("13_ecu0m")]
position = Vector2(2984, 267)

[node name="Goomba7" parent="Enemies" instance=ExtResource("13_ecu0m")]
position = Vector2(3305, 552)

[node name="Goomba8" parent="Enemies" instance=ExtResource("13_ecu0m")]
position = Vector2(3357, 550)

[node name="Goomba9" parent="Enemies" instance=ExtResource("13_ecu0m")]
position = Vector2(4091, 559)

[node name="Goomba10" parent="Enemies" instance=ExtResource("13_ecu0m")]
position = Vector2(4207, 558)

[node name="Goomba11" parent="Enemies" instance=ExtResource("13_ecu0m")]
position = Vector2(4563, 553)

[node name="Goomba12" parent="Enemies" instance=ExtResource("13_ecu0m")]
position = Vector2(4522, 559)

[node name="Goomba13" parent="Enemies" instance=ExtResource("13_ecu0m")]
position = Vector2(4630, 556)

[node name="Goomba14" parent="Enemies" instance=ExtResource("13_ecu0m")]
position = Vector2(4697, 554)

[node name="Goomba15" parent="Enemies" instance=ExtResource("13_ecu0m")]
position = Vector2(6238, 554)

[node name="Goomba16" parent="Enemies" instance=ExtResource("13_ecu0m")]
position = Vector2(6316.0005, 543)

[node name="Koopa" parent="Enemies" instance=ExtResource("14_gmty7")]
position = Vector2(3769, 549)

[node name="Headquarters" parent="." instance=ExtResource("23_usfbk")]
position = Vector2(7456, 571)

[node name="SecretArea" type="Node" parent="."]

[node name="EntranceOverworld" type="Area2D" parent="SecretArea"]
position = Vector2(2070, 468)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SecretArea/EntranceOverworld"]
shape = SubResource("RectangleShape2D_1n1q0")

[node name="EntranceSecret" type="Marker2D" parent="SecretArea"]
position = Vector2(2271, 1909)

[node name="ExitOverworld" type="Marker2D" parent="SecretArea"]
position = Vector2(5850, 540)

[node name="ExitSecret" type="Area2D" parent="SecretArea"]
position = Vector2(2736, 2219)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SecretArea/ExitSecret"]
position = Vector2(4, -0.5)
shape = SubResource("RectangleShape2D_vr02l")

[node name="Coin" parent="SecretArea" instance=ExtResource("8_01b7x")]
position = Vector2(2358, 2100)

[node name="Coin2" parent="SecretArea" instance=ExtResource("8_01b7x")]
position = Vector2(2400, 2100)

[node name="Coin3" parent="SecretArea" instance=ExtResource("8_01b7x")]
position = Vector2(2445, 2100)

[node name="Coin4" parent="SecretArea" instance=ExtResource("8_01b7x")]
position = Vector2(2487, 2100)

[node name="Coin5" parent="SecretArea" instance=ExtResource("8_01b7x")]
position = Vector2(2530, 2100)

[node name="Coin6" parent="SecretArea" instance=ExtResource("8_01b7x")]
position = Vector2(2572, 2100)

[node name="Coin7" parent="SecretArea" instance=ExtResource("8_01b7x")]
position = Vector2(2382, 2059)

[node name="Coin8" parent="SecretArea" instance=ExtResource("8_01b7x")]
position = Vector2(2358, 2018)

[node name="Coin9" parent="SecretArea" instance=ExtResource("8_01b7x")]
position = Vector2(2400, 2018)

[node name="Coin10" parent="SecretArea" instance=ExtResource("8_01b7x")]
position = Vector2(2445, 2018)

[node name="Coin11" parent="SecretArea" instance=ExtResource("8_01b7x")]
position = Vector2(2487, 2018)

[node name="Coin12" parent="SecretArea" instance=ExtResource("8_01b7x")]
position = Vector2(2530, 2018)

[node name="Coin13" parent="SecretArea" instance=ExtResource("8_01b7x")]
position = Vector2(2572, 2018)

[node name="Coin14" parent="SecretArea" instance=ExtResource("8_01b7x")]
position = Vector2(2424, 2059)

[node name="Coin15" parent="SecretArea" instance=ExtResource("8_01b7x")]
position = Vector2(2468, 2060)

[node name="Coin16" parent="SecretArea" instance=ExtResource("8_01b7x")]
position = Vector2(2511, 2060)

[node name="Coin17" parent="SecretArea" instance=ExtResource("8_01b7x")]
position = Vector2(2554, 2060)

[node name="OutOfBounds" type="Node" parent="."]

[node name="SectionA" type="Area2D" parent="OutOfBounds"]
position = Vector2(-134, 723)

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBounds/SectionA"]
position = Vector2(-180, 13)
shape = SubResource("RectangleShape2D_2toya")

[node name="SpawnA" type="Marker2D" parent="OutOfBounds"]
position = Vector2(216, 557)

[node name="SectionB" type="Area2D" parent="OutOfBounds"]
position = Vector2(2499, 737)

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBounds/SectionB"]
position = Vector2(-14.5, -37.5)
shape = SubResource("RectangleShape2D_jfcuo")

[node name="SectionC" type="Area2D" parent="OutOfBounds"]
position = Vector2(3114, 684)

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBounds/SectionC"]
position = Vector2(-4, -1.5)
shape = SubResource("RectangleShape2D_g653p")

[node name="SpawnB" type="Marker2D" parent="OutOfBounds"]
position = Vector2(2345, 520)

[node name="SpawnC" type="Marker2D" parent="OutOfBounds"]
position = Vector2(2986, 532)

[connection signal="body_entered" from="SecretArea/EntranceOverworld" to="." method="_on_entrance_overworld_body_entered"]
[connection signal="body_entered" from="SecretArea/ExitSecret" to="." method="_on_exit_secret_body_entered"]
[connection signal="body_entered" from="OutOfBounds/SectionA" to="." method="_on_section_a_body_entered"]
[connection signal="body_entered" from="OutOfBounds/SectionB" to="." method="_on_section_b_body_entered"]
[connection signal="body_entered" from="OutOfBounds/SectionC" to="." method="_on_section_c_body_entered"]
